--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
             </div>
 
-            <div class="new-members">
+
+            <div class="row new-members">
                 
             </div>
 
@@ -63,6 +64,7 @@
                             <li class="mt-3">Percorso nuova immagine:
                                 <input type="text" id="newImg">
                             </li>
+                            <button class="btn btn-primary mt-3" type="submit">Aggiungi</button>
                         </ul>
                     </form>
                 </div>
